--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>PrototipoRegistro</title>
 </head>
 
@@ -137,10 +137,10 @@
         <button id="mailOk">OK</button>
     </div>
 
-    <script src="/src/doms.js"></script>
-    <script src="/src/auxiliares.js"></script>
-    <script src="/src/validacion.js"></script>
-    <script src="/src/main.js"></script>
+    <script src="src/doms.js"></script>
+    <script src="src/auxiliares.js"></script>
+    <script src="src/validacion.js"></script>
+    <script src="src/main.js"></script>
 </body>
 
 </html>
