--- a/prototipoSolicitudDeTurno/solicitarturnos2.html
+++ b/prototipoSolicitudDeTurno/solicitarturnos2.html
@@ -56,7 +56,7 @@
         <div class="contenedor">
             <h4 class=s eleccionarHorario> Seleccione horario:
                 <form action="" name="formulario" id="form">
-                    <input type="time" name="hora" value="00:00" max="18:00" min="08:00" step="600" id="hora">
+                    <input type="time" name="hora" value="00:00" max="18:00" min="08:00" step="600" id="inputHora">
             </h4>
             <p class="warnings" id="warningsFecha"></p>
         </div>
